tron (0.2.2-1) unstable; urgency=low

  * Resolved an issue where certain service reconfigurations would 
    cause the service to be stuck in the DOWN state (rhettg)
  
 -- Rhett Garber <rhettg@gmail.com>  Wed, 23 Mar 2011 18:26:00 -0800

tron (0.2.1-1) unstable; urgency=low

  * Resolve an issue where run_time wasn't set for manually started jobs (rhettg)
  * Support for multiple arguments to tronctl (for starting things in bulk) (rhettg)
  * Support for starting a job with a specific run_time (rhettg)
  * Resolved an issue where services, after a reconfig, wouldn't cause state changes (rhettg)
  * Updated man pages (rhettg)

 -- Rhett Garber <rhettg@gmail.com>  Wed, 09 Feb 2011 15:20:00 -0800

tron (0.2.0-1) unstable; urgency=low

  * New services system (rhettg)

 -- Rhett Garber <rhettg@gmail.com>  Mon, 06 Feb 2011 15:15:00 -0800


tron (0.1.10-1) unstable; urgency=low

  * Remove use of deprecated twisted timeout calls. Fixes #9 (rhettg)
  * Handle newer versions of twisted (rhettg)
  * Dynamic column widths in tronview and better overflow (ebaum)
  * Command now displayed in tronview for an action Fixes #32 (ebaum)
  * Respect tronview -n option for stdout/stderr output. Fixes #41 (ebaum)
  * Show warnings option for tronview. Fixes #46 (ebaum)
  * Suppress headers option for tronview. (ebaum)
  * Fix an issue where default empty config failed to apply. (rhettg)
  * Add versioning to both tron module, command and state file (rhettg)
  * Set umask on daemon to allow proper pid-file control (rhettg)
  * Fix issue with command context not propogating on live reconfigs. Fixes
    #53 (rhettg)


 -- Rhett Garber <rhettg@gmail.com>  Fri, 14 Jan 2011 13:10:00 -0800

tron (0.1.9-1) unstable; urgency=low

  * Fix issue with config changes causing previous job runs to be in an
    unstable state. #42 (ebaum)

 -- Rhett Garber <rhettg@gmail.com>  Mon, 14 Dec 2010 14:12:00 -0800

tron (0.1.8-1) unstable; urgency=low
