@@ -2,6 +2,8 @@ tron (0.2.2-1) unstable; urgency=low
 
   * Resolved an issue where certain service reconfigurations would 
     cause the service to be stuck in the DOWN state (rhettg)
+  * Reworked service to keep consistant instance numbers across restarts 
+    and reconfigs (rhettg)
   
  -- Rhett Garber <rhettg@gmail.com>  Wed, 23 Mar 2011 18:26:00 -0800
 
